--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "backend",
+  "name": "vlady-backend",
   "version": "1.0.0",
   "main": "backend.js",
   "scripts": {
+    "start": "node backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["ecommerce", "node", "express"],
+  "author": "Your Name",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
+  "description": "Backend for V Lady e-commerce site",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.9"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15"
   }
 }
