--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,11 @@
     "start": "node backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ecommerce", "node", "express"],
+  "keywords": [
+    "ecommerce",
+    "node",
+    "express"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "type": "commonjs",
@@ -17,6 +21,6 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^7.0.9"
   }
 }
