--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "V Lady Frontend",
   "scripts": {
-    "start": "npx http-server . -p 8080 -c-1"
-  },
+    "start": "npx http-server . -p 8080 -c-1",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+    },
   "dependencies": {
     "http-server": "^14.1.1"
   }
