--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,11 +17,12 @@
   "description": "Backend for V Lady e-commerce site",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
+    "express": "^5.1.0",
     "express-session": "^1.18.0",
-    "mongoose": "^8.7.0",
+    "joi": "^18.0.1",
+    "mongoose": "^8.19.2",
     "nodemailer": "^7.0.9"
   }
 }
