--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,8 +19,9 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-session": "^1.18.0",
+    "express-session": "^1.18.2",
     "joi": "^18.0.1",
     "mongoose": "^8.19.2",
     "nodemailer": "^7.0.9"
