--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "firebase": "^12.4.0",
     "joi": "^18.0.1",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
